syntax = "proto3";

package game;
option go_package = "golang.project/go-fundamentals/gameapp/contract/goprotobuf/game";

message CreatedGame {
  uint64 game_id = 1;
  repeated uint64 player_ids = 2;
}
